(executables
 (names about assistant assistant_tutorial buttons cairo_demo calc calendar cgets counter drawing entry entry2 expander fifteen fixpoint hello label link_button notebook pango1 pango2 progressbar radiobuttons rpn scrolledwin seppala signal_override)
 (flags (:standard \ -strict-sequence) -w -3-6-7-10-24-26-27-33-35)
 (libraries GIGtk))
