;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; Common setup and tools                                               ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

; We use a bash rule to ensure we call the byte version and thus we
; avoid the auto-printer selection in Camlp4AutoPrinter.
(rule
 (targets varcc.ml)
 (deps (:source varcc.ml4))
 (mode promote)
 (action (bash "camlp5o pr_o.cmo -impl %{source} -o %{targets}")))

(executables
 (names varcc)
 (modules varcc))

(executable
 (name dune_config)
 (modules dune_config)
 (libraries dune.configurator))

(library
 (name gtkdoc)
 (modules gtkdoc)
 (libraries str ocamldoc))
